<?xml version="1.0" encoding="utf-8"?>




<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:orientation="vertical" android:padding="4dip"
    android:gravity="center_horizontal"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button android:id="@+id/start_logging"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/start_logging">
        <requestFocus />
    </Button>

    <Button android:id="@+id/stop_logging"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/stop_logging" />
        
    <Button android:id="@+id/exit_app"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/exit_app" />
        
    <TextView android:id="@+id/latitude" 
    	android:text="@string/latitude" 
    	android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        
    <TextView android:id="@+id/longitude" 
    	android:text="@string/longitude" 
    	android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        
    <TextView android:id="@+id/error" 
    	android:text="@string/error" 
    	android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        />

</LinearLayout>

